--- a/index.html
+++ b/index.html
@@ -17,4 +17,4 @@
 <p><strong>ňěmecký špic trpasličí</strong></p>
 <p>Vzhled: Malý, kompaktní pes s huňatou srstí a špičatýma ušimama lidé ho často nazívají kulička.</p>
 <p>Co naučit: Základní poslušnost, socializace s lidmi a jinými zvířaty.</p>
-<img src=""
+<img src="">
